objects/ssot__ProviderVisitDtlProductMessage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdditionalInformationText__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CapturedReactionText__c</fullName>
        <label>Captured Reaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Provider Visit Product Dtl Message Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsGeneratedFromPresentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generated From Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__ProductGuidanceId__c</fullName>
        <label>Product Guidance</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderVisitProductDetailingId__c</fullName>
        <label>Provider Visit Product Detailing</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReactionType__c</fullName>
        <label>Reaction Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561247249_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisitDtlProductMessage_Produ_rel</label>
        <referenceTo>ssot__ProductGuidance__dlm</referenceTo>
        <relationshipLabel>ProviderVisitDtlProductMessage_Produ_rel</relationshipLabel>
        <relationshipName>rel_1745561247249_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561344280_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisitDtlProductMessage_Provi_rel</label>
        <referenceTo>ssot__ProviderVisitProductDetailing__dlm</referenceTo>
        <relationshipLabel>ProviderVisitDtlProductMessage_Provi_rel</relationshipLabel>
        <relationshipName>rel_1745561344280_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>